--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_install:
 
 before_script:
 - psql -c 'create database pgapp_insta_test;' -U postgres
-- psql -d pgapp_test -c 'CREATE TABLE posts (id serial PRIMARY KEY, caption VARCHAR, image VARCHAR, created_at TIMESTAMP, updated_at TIMESTAMP);' -U postgres
+- psql -d pgapp_insta_test -c 'CREATE TABLE posts (id serial PRIMARY KEY, caption VARCHAR, image VARCHAR, created_at TIMESTAMP, updated_at TIMESTAMP);' -U postgres
